--- a/src/app/pages/main/main.page.html
+++ b/src/app/pages/main/main.page.html
@@ -1,7 +1,9 @@
+
 <ion-header>
 </ion-header>
 
 <ion-content>
+
 
   <!--메인박스 -->
   <div class="container">
@@ -20,7 +22,7 @@
 
     <!-- 타이틀 , 초기화, 지난내역보기 -->
     <div class="title">
-      관리자페이지
+      관리자페이지(Ver 1.0)
 
       <div>
         <button class="btn" (click)="onBackUp()">백업</button>
